feat: 新增工作量执行逻辑