@@ -1,8 +1,12 @@
 package com.lambda.fusion.ai.commons.agent;
 
+import static com.lambda.fusion.ai.AiConfigure.LlmResilienceConfig.LLM_CIRCUIT_BREAKER;
+import static com.lambda.fusion.ai.AiConfigure.LlmResilienceConfig.LLM_RETRY;
+
 import com.lambda.fusion.ai.commons.support.factory.ChatModelFactory;
 import com.lambda.fusion.ai.service.PromptTemplateService;
 import dev.langchain4j.agent.tool.ToolSpecification;
+import dev.langchain4j.data.message.AiMessage;
 import dev.langchain4j.data.message.ChatMessage;
 import dev.langchain4j.data.message.SystemMessage;
 import dev.langchain4j.model.chat.ChatModel;
@@ -10,6 +14,11 @@ import dev.langchain4j.model.chat.StreamingChatModel;
 import dev.langchain4j.model.chat.request.ChatRequest;
 import dev.langchain4j.model.chat.response.ChatResponse;
 import dev.langchain4j.model.chat.response.StreamingChatResponseHandler;
+import io.github.resilience4j.circuitbreaker.CallNotPermittedException;
+import io.github.resilience4j.circuitbreaker.CircuitBreaker;
+import io.github.resilience4j.circuitbreaker.CircuitBreakerRegistry;
+import io.github.resilience4j.retry.Retry;
+import io.github.resilience4j.retry.RetryRegistry;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
@@ -17,12 +26,18 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
+import java.util.function.Supplier;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 /**
  * 图节点：负责向大语言模型请求分析，决定是回复用户还是调用后续Tool。
+ *
+ * 容错特性：
+ * - 重试：失败时自动重试最多3次
+ * - 熔断：失败率超过50%时熔断30秒
+ * - 降级：熔断时返回友好提示
  */
 @Slf4j
 @Component
@@ -34,6 +49,8 @@ public class LlmProcessingNode implements AgentNode {
     private final ChatModelFactory chatModelFactory;
     private final AgentToolProvider toolProvider;
     private final PromptTemplateService promptTemplateService;
+    private final CircuitBreakerRegistry circuitBreakerRegistry;
+    private final RetryRegistry retryRegistry;
 
     @Override
     public String getName() {
@@ -55,16 +72,66 @@ public class LlmProcessingNode implements AgentNode {
         StreamingChatResponseHandler handler =
                 (StreamingChatResponseHandler) nextState.getAttributes().get("streamHandler");
 
-        ChatResponse response;
+        try {
+            ChatResponse response = executeWithResilience(nextState, effectiveModelId, systemPrompt, tools, handler);
+            return handleResponse(nextState, response);
+        } catch (CallNotPermittedException e) {
+            log.warn("LLM 熔断器已打开，执行降级策略");
+            return handleFallback(nextState, "服务暂时不可用，请稍后重试");
+        } catch (Throwable e) {
+            log.error("LLM 调用失败", e);
+            return handleFallback(nextState, "服务调用失败: " + e.getMessage());
+        }
+    }
 
-        ChatRequest.Builder requestBuilder = ChatRequest.builder().messages(buildMessages(nextState, systemPrompt));
+    private ChatResponse executeWithResilience(
+            AgentState state,
+            Long modelId,
+            String systemPrompt,
+            List<ToolSpecification> tools,
+            StreamingChatResponseHandler handler)
+            throws Throwable {
+
+        CircuitBreaker circuitBreaker = circuitBreakerRegistry.circuitBreaker(LLM_CIRCUIT_BREAKER);
+        Retry retry = retryRegistry.retry(LLM_RETRY);
+
+        // 使用 Resilience4j 的装饰器链
+        Supplier<ChatResponse> decoratedSupplier = CircuitBreaker.decorateSupplier(circuitBreaker, () -> {
+            try {
+                return doLlmCall(state, modelId, systemPrompt, tools, handler);
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
+        });
+
+        decoratedSupplier = Retry.decorateSupplier(retry, decoratedSupplier);
+
+        try {
+            return decoratedSupplier.get();
+        } catch (RuntimeException e) {
+            if (e.getCause() instanceof Exception) {
+                throw e.getCause();
+            }
+            throw e;
+        }
+    }
+
+    private ChatResponse doLlmCall(
+            AgentState state,
+            Long modelId,
+            String systemPrompt,
+            List<ToolSpecification> tools,
+            StreamingChatResponseHandler handler)
+            throws Exception {
+
+        ChatRequest.Builder requestBuilder = ChatRequest.builder().messages(buildMessages(state, systemPrompt));
         if (!tools.isEmpty()) {
             requestBuilder.toolSpecifications(tools);
         }
         ChatRequest request = requestBuilder.build();
 
         if (handler != null) {
-            StreamingChatModel streamingModel = chatModelFactory.getStreamingChatModel(effectiveModelId);
+            StreamingChatModel streamingModel = chatModelFactory.getStreamingChatModel(modelId);
             CompletableFuture<ChatResponse> future = new CompletableFuture<>();
 
             StreamingChatResponseHandler innerHandler = new StreamingChatResponseHandler() {
@@ -86,19 +153,14 @@ public class LlmProcessingNode implements AgentNode {
             };
 
             streamingModel.chat(request, innerHandler);
-
-            try {
-                response = future.join();
-            } catch (Exception e) {
-                log.error("LlmProcessingNode 异步流被中断", e);
-                nextState.setFinished(true);
-                return new ExecutionResult(nextState, AgentGraph.END_NODE);
-            }
+            return future.join();
         } else {
-            ChatModel chatModel = chatModelFactory.getChatModel(effectiveModelId);
-            response = chatModel.chat(request);
+            ChatModel chatModel = chatModelFactory.getChatModel(modelId);
+            return chatModel.chat(request);
         }
+    }
 
+    private ExecutionResult handleResponse(AgentState nextState, ChatResponse response) {
         nextState.addMessage(response.aiMessage());
 
         if (response.tokenUsage() != null) {
@@ -119,6 +181,13 @@ public class LlmProcessingNode implements AgentNode {
             nextState.setFinished(true);
             return new ExecutionResult(nextState, AgentGraph.END_NODE);
         }
+    }
+
+    private ExecutionResult handleFallback(AgentState nextState, String fallbackMessage) {
+        nextState.addMessage(AiMessage.from(fallbackMessage));
+        nextState.setFinished(true);
+        nextState.getAttributes().put("fallback", true);
+        return new ExecutionResult(nextState, AgentGraph.END_NODE);
     }
 
     private List<ChatMessage> buildMessages(AgentState nextState, String systemPrompt) {
@@ -175,7 +244,6 @@ public class LlmProcessingNode implements AgentNode {
         return null;
     }
 
-    @SuppressWarnings("unchecked")
     private Map<String, Object> buildTemplateVariables(AgentState nextState, Map<String, Object> nodeProperties) {
         Map<String, Object> variables = new HashMap<>();
         variables.put("sessionId", nextState.getSessionId());
@@ -200,7 +268,7 @@ public class LlmProcessingNode implements AgentNode {
         List<ChatMessage> messages = nextState.getMessages();
         if (messages != null && !messages.isEmpty()) {
             variables.put("messageCount", messages.size());
-            variables.put("lastMessage", messages.get(messages.size() - 1));
+            variables.put("lastMessage", messages.getLast());
         }
         return variables;
     }
